faf-homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: faf-homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: faf-community-hub
    app.kubernetes.io/part-of: faf-community-hub
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: faf-community-hub

  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
