faf-homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: faf-homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: faf-community-hub
    app.kubernetes.io/part-of: faf-community-hub

  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - faf-hub.services.atlantishq.de
      secretName: faf-hub-tls

  rules:
    - host: faf-hub.services.atlantishq.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
